--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 #This file lists all contributors to the repository.
 
-LJ Thao
-Dacoda Takagi
-Charles Johnson
+LJ Thao <ythao1202@gmail.com>
+Dacoda Takagi <dacods.21@gmail.com>
+Charles Johnson <cj.johnson2017@gmail.com>
